add credits screen and change font style

--- a/tetris-2/index.html
+++ b/tetris-2/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-	<title>Tetris by Caio Marchi - Powered by Phaser</title>
+	<meta charset="UTF-8">
+	<title>Tetris-NES</title>
 
 	<link rel="stylesheet" href="css/fonts.css">
 	<script type="text/javascript" src="js/phaser.js"></script>
