--- a/tetris-2/index.html
+++ b/tetris-2/index.html
@@ -24,11 +24,13 @@
 	<script type="text/javascript" src="js/settings.js"></script>
 	<script type="text/javascript" src="js/menu.js"></script>
 	<script type="text/javascript" src="js/load.js"></script>
+    <script type="text/javascript" src="js/teste.js"></script>
 	<script type="text/javascript" src="js/menuNav.js"></script>
 	<script type="text/javascript" src="js/languages.js"></script>
 	<script type="text/javascript" src="js/boot.js"></script>
 	<script type="text/javascript" src="js/audioControl.js"></script>
 	<script type="text/javascript" src="js/game.js"></script>
+    
 
 </head>
 <body>
